force-app/main/default/objects/Distribution_Client__c/Distribution_Client__c.object-meta.xml
<CustomObject>
    <description>Clients to whom we are distributing money (lending)</description>
    <label>Distribution Client</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>DC-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Clients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>