force-app/main/default/objects/Distribution_Client__c/fields/Distribution_Client__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distribution Clients (Distribution Client)</relationshipLabel>
    <relationshipName>Distribution_Clients1</relationshipName>
    <type>Lookup</type>
</CustomField>