force-app/main/default/objects/Distribution_Client__c/fields/Margin_Points__c.field-meta.xml
<CustomField>
    <fullName>Margin_Points__c</fullName>
    <label>Margin Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>