force-app/main/default/objects/Distribution_Client__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not visible on the page layout of the Distribution Client, but is being populated by the &quot;Add Distribution Client&quot; related list of the Product. The purpose is to be able to display distribution clients on the related list of Opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Distribution Clients</relationshipLabel>
    <relationshipName>Distribution_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>