force-app/main/default/objects/Distribution_Client__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>SB_Product__c</referenceTo>
    <relationshipLabel>Distribution Clients</relationshipLabel>
    <relationshipName>Distribution_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>