force-app/main/default/objects/Distribution_Client__c/validationRules/Distribution_Client_can_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Distribution_Client_can_not_be_empty</fullName>
    <active>true</active>
    <description>This will only affect records through the API or Apex as the page layout already has the field as Required. Used to enforce data being entered via Visualforce pages.</description>
    <errorConditionFormula>LEN(Distribution_Client__c ) = 0</errorConditionFormula>
    <errorDisplayField>Distribution_Client__c</errorDisplayField>
    <errorMessage>Distribution Client can not be empty</errorMessage>
</ValidationRule>