force-app/main/default/objects/Distribution_Client__c/validationRules/Margin_Points_can_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Margin_Points_can_not_be_empty</fullName>
    <active>true</active>
    <description>This will only affect records through the API or Apex as the page layout already has the field as Required.
Used to enforce data being entered via Visualforce pages.</description>
    <errorConditionFormula>ISNULL( Margin_Points__c )</errorConditionFormula>
    <errorDisplayField>Margin_Points__c</errorDisplayField>
    <errorMessage>Margin Points can not be empty</errorMessage>
</ValidationRule>